src/test/resources/testcases/invalid/functions/void_arg.tc

void f() {}
int g(int a) { return a; }
int main() {
    return g(f());
}

